@@ -25,9 +25,10 @@ source(file, local = FALSE, echo = verbose, print.eval = echo,
   \item{file}{a \link{connection} or a character string giving the pathname
     of the file or URL to read from.  \code{""} indicates the connection
     \code{\link{stdin}()}.}
-  \item{local}{if \code{local} is \code{FALSE}, the parsed expressions
-    are evaluated in the user's workspace (the global environment),
-    otherwise in the environment calling \code{source}.}
+  \item{local}{\code{TRUE}, \code{FALSE} or an environment, determining
+    where the parsed expressions are evaluated.  \code{TRUE} corresponds
+    to the user's workspace (the global environment) and \code{FALSE} to
+    the environment from \code{source} is called.}
   \item{echo}{logical; if \code{TRUE}, each expression is printed
     after parsing, before evaluation.}
   \item{print.eval}{logical; if \code{TRUE}, the result of
